--- a/Game/app/src/main/res/layout/activity_propos.xml
+++ b/Game/app/src/main/res/layout/activity_propos.xml
@@ -16,12 +16,14 @@
         android:background="@drawable/red_pill"/>
 
     <ScrollView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:id="@+id/scrollView"
         android:layout_gravity="left|top"
         android:nestedScrollingEnabled="false"
-        android:background="#9c000000">
+        android:background="#9c000000"
+        android:layout_marginBottom="60dp"
+        android:fillViewport="true">
 
         <TextView
             android:layout_width="365dp"
@@ -29,12 +31,13 @@
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="@string/text_propos"
             android:id="@+id/textView"
-            android:layout_gravity="center_horizontal|top"
+            android:layout_gravity="left|center_vertical"
             android:textSize="50px"
             android:textIsSelectable="false"
             android:textAlignment="center"
             android:autoText="false"
-            android:textColor="#ffffff" />
+            android:textColor="#ffffff"
+            android:layout_marginBottom="40dp" />
     </ScrollView>
 
 </FrameLayout>
