--- a/Game/app/src/main/res/layout/content_main.xml
+++ b/Game/app/src/main/res/layout/content_main.xml
@@ -1,15 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" >
 
-    <SurfaceView
-        android:id="@+id/surface_view"
+
+    <matrux.game.jeu.CameraSurfacePreview
+        android:id="@+id/camera_view"
+        android:background="@android:color/transparent"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         />
+
+    <matrux.game.jeu.EnnemiView
+        android:id="@+id/ennemi_view"
+        android:background="@android:color/transparent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        />
+
     <TextView
         android:id="@+id/visage_detect"
         android:layout_width="wrap_content"
@@ -23,7 +33,7 @@
         android:layout_height="150dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:layout_gravity="right|bottom" />
 
-</RelativeLayout>
-
+</FrameLayout>
