--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -23,7 +23,9 @@
             android:text="@string/button_jouer"
             android:id="@+id/button_jouer"
             android:layout_gravity="center_horizontal"
-            android:background="@drawable/blue_pill"/>
+            android:background="@drawable/blue_pill"
+            android:textColor="#ffffff" />
+
 
         <Button
             android:layout_width="wrap_content"
@@ -31,7 +33,8 @@
             android:text="@string/button_apropos"
             android:id="@+id/button_apropos"
             android:layout_gravity="center_horizontal"
-            android:background="@drawable/blue_pill"/>
+            android:background="@drawable/blue_pill"
+            android:textColor="#ffffff" />
 
         <Button
             android:layout_width="wrap_content"
@@ -39,7 +42,8 @@
             android:text="@string/button_quitter"
             android:id="@+id/button_quitter"
             android:layout_gravity="center_horizontal"
-            android:background="@drawable/red_pill"/>
+            android:background="@drawable/red_pill"
+            android:textColor="#ffffff" />
     </LinearLayout>
 
     <ImageView
