--- a/app/src/main/res/layout/activity_propos.xml
+++ b/app/src/main/res/layout/activity_propos.xml
@@ -13,31 +13,34 @@
         android:text="Retour"
         android:id="@+id/button_retour"
         android:layout_gravity="center_horizontal|bottom"
-        android:background="@drawable/red_pill"/>
+        android:background="@drawable/red_pill"
+        android:textColor="#ffffff" />
 
     <ScrollView
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_width="478dp"
+        android:layout_height="186dp"
         android:id="@+id/scrollView"
-        android:layout_gravity="left|top"
-        android:nestedScrollingEnabled="false"
+        android:fillViewport="true"
         android:background="#9c000000"
         android:layout_marginBottom="60dp"
-        android:fillViewport="true">
-
-        <TextView
-            android:layout_width="365dp"
-            android:layout_height="193dp"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="@string/text_propos"
-            android:id="@+id/textView"
-            android:layout_gravity="left|center_vertical"
-            android:textSize="50px"
-            android:textIsSelectable="false"
-            android:textAlignment="center"
-            android:autoText="false"
-            android:textColor="#ffffff"
-            android:layout_marginBottom="40dp" />
+        android:layout_gravity="center">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:weightSum="1">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="@string/text_propos"
+                android:id="@+id/textView"
+                android:textSize="25dp"
+                android:textIsSelectable="false"
+                android:textAlignment="center"
+                android:textColor="#ffffff"
+                android:layout_weight="0.92">
+            </TextView>
+        </LinearLayout>
     </ScrollView>
-
 </FrameLayout>
