--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -54,4 +54,12 @@
         android:layout_gravity="center_horizontal|top"
         android:src="@drawable/matrux"/>
 
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/button_music"
+        android:layout_gravity="right|top"
+        android:background="@android:drawable/ic_media_pause" />
+
 </FrameLayout>
