--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -35,4 +35,18 @@
         android:layout_alignParentEnd="true"
         android:layout_gravity="right|bottom" />
 
+    <matrux.game.jeu.Joueur
+        android:id="@+id/joueur"
+        android:layout_gravity="top|left"
+        android:layout_width="200dp"
+        android:layout_height="200dp" />
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/button_music"
+        android:layout_gravity="right|top"
+        android:background="@android:drawable/ic_media_pause" />
+
 </FrameLayout>
